# tattoy

./: Cargo.toml  README.md  ctl.sh  flake.nix
.github/workflows/: cd.yaml  ci.yaml  release-plz.yaml
crates/shadow_terminal/: Cargo.toml
crates/tattoy/: CHANGELOG.md  Cargo.toml  default_config.toml  default_palette.toml
crates/tattoy-plugins/inverter/: Cargo.toml
crates/tattoy-plugins/smokey_cursor/: Cargo.toml
crates/tattoy-protocol/: CHANGELOG.md  Cargo.toml
crates/tattoy/src/: blender.rs  cli_args.rs  compositor.rs  loader.rs  main.rs  raw_input.rs  renderer.rs  run.rs  shared_state.rs  surface.rs  utils.rs
crates/tattoy/src/config/: input.rs  main.rs
crates/tattoy/src/palette/: converter.rs  main.rs  osc.rs  parser.rs
crates/tattoy/src/tattoys/: animated_cursor.rs  bg_command.rs  minimap.rs  plugins.rs  random_walker.rs  shader.rs  tattoyer.rs
crates/tattoy/src/tattoys/gpu/: handle_messages.rs  ichannel.rs  pipeline.rs  shaderer.rs
crates/tattoy/src/tattoys/gpu/shaders/: header.glsl  smear.glsl  smear_fade.glsl
crates/tattoy/src/tattoys/notifications/: main.rs
crates/tattoy/src/tattoys/shaders/: main.rs
crates/tattoy/src/terminal_proxy/: input_handler.rs  proxy.rs
crates/tests/: Cargo.toml  e2e.rs  e2e_tests.rs  gpu.rs  main.rs  utils.rs
crates/tests/resources/: bad_plugin.sh  print_low_contrast_samples.sh
scripts/aur/: PKGBUILD
website/: README.md
website/content/: download.md
website/content/docs/: config.md  getting-started.md  shaders.md
website/content/news/2025-07-20-animated-cursors/: index.md
website/sass/pages/: _docs.scss
website/static/assets/screenshots/: cursor_blaze.webm  cursor_blaze_large.webm  cursor_smear_fade.webm  manga_slash.webm
website/templates/: docs.html  index.html  news-page.html
website/templates/layouts/: base.html
