[package]
name = "shadow-terminal"
description = "A fully rendered in-memory terminal"
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tattoy-org/tattoy"
documentation = "https://docs.rs/shadow-terminal"
license = "MIT"
keywords = ["shell", "testing"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
portable-pty = "0.8.1"
termwiz.workspace = true
snafu = "0.8.5"

[dependencies.wezterm-term]
package = "tattoy-wezterm-term"
version = "0.1.0-fork.3"
# path = "../../../wezterm/term"

[lints]
workspace = true
