[package]
name = "tattoy-protocol"
description = "Types to help with writing Rust-based Tattoy plugins"
documentation = "https://docs.rs/tattoy-protocol"
version = "0.1.1"
license = "MIT"
edition = "2021"

[dependencies]
bon = "3.6.0"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
