[package]
name = "tattoy"
description = "Text-based compositor for modern terminals"
version = "0.1.4"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tattoy-org/tattoy"
license = "MIT"
authors = ["Tom Buckley-Houston <tattoy@tombh.co.uk>"]
keywords = ["shell", "eye-candy", "compositor"]
categories = ["command-line-utilities"]
default-run = "tattoy"
rust-version = "1.87.0"

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"]}
clap = { version = "4.5.4", features = ["derive"] }
color-eyre.workspace = true
console-subscriber = "0.4.1"
dirs = "6.0.0"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
image = { version = "0.25.5", default-features = false }
notify-debouncer-full = "0.5.0"
rand.workspace = true
shadow-terminal.workspace = true
serde.workspace = true
serde_json.workspace = true
tattoy-protocol = { path = "../tattoy-protocol", version = "0.1.1" }
tempfile.workspace = true
tokio.workspace = true
toml = "0.8.20"
tracing.workspace = true
tracing-subscriber.workspace = true
xcap = "0.3.2"
wgpu = { version = "24.0", default-features = false, features = [ "dx12", "metal", "glsl" ] }
palette.workspace = true

[lints]
workspace = true

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/tattoy", dest = "/usr/bin/tattoy", mode = "755" },
  { source = "../../LICENSE-MIT", dest = "/usr/share/doc/tattoy/LICENSE-MIT", mode = "644" },
  { source = "../../README.md", dest = "/usr/share/doc/tattoy/README.md", mode = "644" }
]

[package.metadata.deb]
assets = [
  [
    "target/release/tattoy",
    "usr/bin/",
    "755",
  ],
  [
    "../../LICENSE-MIT",
    "/usr/share/doc/tattoy/LICENSE-MIT",
    "644",
  ],
  [
    "../../README.md",
    "usr/share/doc/tattoy/README",
    "644",
  ]
]
