[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
palette.workspace = true
shadow-terminal.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[test]]
name = "e2e"
path = "main.rs"

[lints]
workspace = true
